--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "emulate": "concurrently \"npm run dev\" \"swa start http://localhost:5173\""
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "bulma": "^0.9.4",
     "bulma-slider": "^2.0.5",
     "node-fetch": "^3.3.2",
